--- a/Application/Application.csproj
+++ b/Application/Application.csproj
@@ -14,6 +14,7 @@
     <ItemGroup>
       <PackageReference Include="AutoMapper" Version="13.0.1" />
       <PackageReference Include="FluentResults" Version="3.16.0" />
+      <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="7.0.20" />
     </ItemGroup>
 
 </Project>
