--- a/Client/package.json
+++ b/Client/package.json
@@ -13,6 +13,12 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.6.0",
+    "@fortawesome/free-brands-svg-icons": "^6.6.0",
+    "@fortawesome/free-regular-svg-icons": "^6.6.0",
+    "@fortawesome/free-solid-svg-icons": "^6.6.0",
+    "@fortawesome/vue-fontawesome": "^3.0.8",
+    "axios": "^1.7.3",
     "daisyui": "^4.12.10",
     "pinia": "^2.1.7",
     "vue": "^3.4.29",
