--- a/Client/package.json
+++ b/Client/package.json
@@ -18,6 +18,7 @@
     "@fortawesome/free-regular-svg-icons": "^6.6.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/vue-fontawesome": "^3.0.8",
+    "@microsoft/signalr": "^8.0.7",
     "axios": "^1.7.3",
     "daisyui": "^4.12.10",
     "pinia": "^2.1.7",
