--- a/Server/Application/Application.csproj
+++ b/Server/Application/Application.csproj
@@ -14,6 +14,9 @@
     <ItemGroup>
       <PackageReference Include="AutoMapper" Version="13.0.1" />
       <PackageReference Include="FluentResults" Version="3.16.0" />
+      <PackageReference Include="Hangfire.AspNetCore" Version="1.8.14" />
+      <PackageReference Include="Hangfire.Core" Version="1.8.14" />
+      <PackageReference Include="Hangfire.SqlServer" Version="1.8.14" />
       <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="7.0.20" />
     </ItemGroup>
 
